--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.MyAppTFG"
         tools:targetApi="31">
         <activity
+            android:name=".HeaderActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".PreoperatorioActivity"
+            android:exported="false" />
+        <activity
             android:name=".HeaderActivity"
             android:exported="false" />
         <activity
